# arxiv-mcp

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  compose.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/arxiv_mcp/: client.py  domain.py  server.py
tests/: test_client.py  test_domain.py
