[project]
name = "arxiv-mcp"
version = "0.1.0"
description = "MCP server for searching arXiv, retrieving full-text HTML, and downloading PDFs"
readme = "README.md"
authors = [
    { name = "Daniel Klevebring", email = "daniel.klevebring@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "mcp",
    "arxiv",
    "httpx",
    "pydantic",
]

[project.scripts]
arxiv-mcp = "arxiv_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.13"
reportMissingTypeStubs = false

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]
